fix cloud spacing

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h2.date {
 }
 
 #cloud1 {
-  top: 200px;
+  top: 220px;
   left: 4vw;
   width: 100px;
 }
@@ -84,7 +84,7 @@ h2.date {
 }
 
 #cloud3 {
-  top: 109px;
+  top: 80px;
   right: 17vw;
   width: 68px;
   opacity: .95;
